Implement build-engine v2 (#3)
